[package]
name = "prefix-search"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive", "cargo"] }
env_logger = "0.11.5"
jdt = { git = "ssh://git@github.com/amachang/jdt.git", version = "0.1.0" }
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
termcolor = "1.4.1"
thiserror = "1.0.63"
